Zxing barcode implementation and detailsViewModelFactory

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.0'
     annotationProcessor("androidx.room:room-compiler:2.4.0")
     kapt("androidx.room:room-compiler:2.4.0")
+    //BarcodeScanner
+    implementation('com.journeyapps:zxing-android-embedded:4.3.0') { transitive = false }
+    implementation 'com.google.zxing:core:3.3.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
