--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,16 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.hunahpuv2">
 
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android"/>
+
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HunahpuV2"
-        android:hardwareAccelerated="true">
+        android:theme="@style/Theme.HunahpuV2">
+        <activity
+            android:name=".iu.views.SearchPage"
+            android:exported="false" />
+        <activity
+            android:name=".iu.views.SearchResultActivity"
+            android:exported="false" />
         <activity
             android:name=".iu.views.ProductDetails"
             android:exported="false" />
@@ -49,10 +57,10 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.journeyapps.barcodescanner.CaptureActivity"
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
-            tools:replace="screenOrientation"/>
+            tools:replace="screenOrientation" />
     </application>
 
 </manifest>
