--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,12 @@ dependencies {
     //Pagination
     implementation("androidx.paging:paging-runtime:3.0.0-beta02")
 
+    //Location
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+
+    //DataStore
+    implementation 'androidx.datastore:datastore-preferences:1.0.0-alpha06'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
